# actor_actix_crossbeam

./: .gitignore  Cargo.toml
src/: actor_tools.rs  heartbeat_actor.rs  logger_actor.rs  main.rs
