[package]
name = "actor_actix_crossbeam"
version = "0.1.0"
authors = ["GregP <glp@swimr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-rt = "*"
# tokio = {version = "0.2.22", features = ["full"] }
crossbeam-utils = "0.7.2"
crossbeam-channel = "0.4.4"
